--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -3,7 +3,9 @@
     <ion-title>users</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<!-- src/app/users/users.component.html -->
+<h1>Users Page</h1>
+<p>Lista de usuarios aquí...</p>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
